--- a/08-HTML/homework/homework.html
+++ b/08-HTML/homework/homework.html
@@ -3,16 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Tarea HTML de Ricardo GT</title>
-    <style>
-        h1 {color: blue;}
-        #spanId {font-size: 18px; 
-            margin: 50px;}
-        #thirdDiv {height: 600px; 
-            background-color:bisque; 
-            padding: 50px; 
-            margin-top: 50px;}
-        img {width: 400px}
-    </style>
+    <link rel="stylesheet" href="./styles.css">
 </head>
 <body>
     <div class="divClass">
